# Lightweight_TSFM-PNT2

./: .gitignore  README.md
Pointnet2_Transformer_pytorch/: infer_partseg.py  ply_to_txt.py  test_partseg.py  train_partseg.py
Pointnet2_Transformer_pytorch/data_utils/: ShapeNetDataLoader.py
Pointnet2_Transformer_pytorch/models/: pointnet2_part_seg_msg.py  pointnet2_sem_seg_msg.py  pointnet2_utils.py
Pointnet2_base/models/: pointnet2_part_seg_msg.py
RASAC/: CMakeLists.txt  kk2.ply  test.cpp  voltest - Cloud.ply  voltest.txt
pcl_filter/: CMakeLists.txt  Mean.cpp  SOR.cpp  main.cpp  smooth.cpp
